# claude-code-camp-2026-Q2

./: .gitignore  CLAUDE.md
.boukensha/sessions/: 20260723T181623Z-cb5e6d05.jsonl  20260723T190755Z-a735bb75.jsonl
.claude/skills/python-port/: SKILL.md
docs/: explore_architectures.md
docs/journal/: 0_preweek.md  1_week1.md
docs/plans/python_port/: 00_config  01_struct_skeleton  02_the_registry  03_prompt_builder  04_api_client  05_agent_loop  06_the_logger
week0_explore/: CHALLENGES.md
week0_explore/explore_architecture/01_plain_agent/: CLAUDE.md
week0_explore/explore_architecture/03_subagent_sdk/: package-lock.json  package.json
week0_explore/explore_architecture/03_subagent_sdk/docs/: plan.md
week1_baseline/python/00_config/: README.md  pyproject.toml
week1_baseline/python/00_config/boukensha/: __init__.py  config.py
week1_baseline/python/00_config/boukensha/tasks/: base.py  player.py
week1_baseline/python/00_config/examples/: example.py
week1_baseline/python/01_struct_skeleton/: README.md  pyproject.toml
week1_baseline/python/01_struct_skeleton/boukensha/: __init__.py  context.py
week1_baseline/python/01_struct_skeleton/examples/: example.py
week1_baseline/python/02_the_registry/: README.md  pyproject.toml
week1_baseline/python/02_the_registry/boukensha/: __init__.py  config.py  context.py
week1_baseline/python/02_the_registry/boukensha/tasks/: player.py
week1_baseline/python/02_the_registry/examples/: example.py
week1_baseline/python/03_prompt_builder/: README.md  pyproject.toml
week1_baseline/python/03_prompt_builder/boukensha/: __init__.py  config.py  message.py
week1_baseline/python/03_prompt_builder/boukensha/backends/: openai.py
week1_baseline/python/03_prompt_builder/boukensha/tasks/: base.py
week1_baseline/python/03_prompt_builder/examples/: example.py
week1_baseline/python/04_api_client/: README.md  pyproject.toml
week1_baseline/python/04_api_client/boukensha/: __init__.py  client.py  prompt_builder.py
week1_baseline/python/04_api_client/boukensha/backends/: anthropic.py  gemini.py  ollama.py  ollama_cloud.py
week1_baseline/python/04_api_client/boukensha/tasks/: base.py
week1_baseline/python/04_api_client/examples/: example.py
week1_baseline/python/05_agent_loop/: README.md  pyproject.toml
week1_baseline/python/05_agent_loop/boukensha/: __init__.py  agent.py  config.py  prompt_builder.py  tool.py
week1_baseline/python/05_agent_loop/boukensha/backends/: anthropic.py  openai.py
week1_baseline/python/05_agent_loop/examples/: example.py
week1_baseline/python/06_the_logger/: README.md  pyproject.toml
week1_baseline/ruby/00_config/: README.md
week1_baseline/ruby/02_the_registry/: README.md
(+44 files in other folders)
