[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boukensha"
version = "0.1.0"
description = "Python port of the Boukensha config layer (week1_baseline step 00_config) -- see docs/plans/python_port/00_config"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]
